06_Multi_Cloud_Final_Capstone/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-platform
spec:
  replicas: 2
