06_Multi_Cloud_Final_Capstone/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurance-platform-service
spec:
  type: LoadBalancer
