06_Multi_Cloud_Final_Capstone/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insurance-platform-ingress
